alignment fix

--- a/src/styles/components/ProgressDisplay.module.scss
+++ b/src/styles/components/ProgressDisplay.module.scss
@@ -10,7 +10,7 @@
   font-family: a.$secondaryFont;
 
   .text {
-    width: 120px;
+    width: 150px;
 
     .title {
       font-weight: 900;
